<resources>
    <string name="app_name">BABY BUMP</string>
    <string name="Nombre">Tu Nombre:</string>
    <string name="Dias">Dias de Gestacion: </string>
    <string name="Genero">¿Ya sabe el Genero?:</string>
    <string name="NombreLinea"></string>
    <string name="DiasLinea"></string>
    <string name="GeneroLinea"></string>
    <string name="Ingresar">INGRESAR</string>
    <string name="InfoGenero">Confirma Genero en Camino:</string>
    <string name="InfoDias">Confirma Dias Gestion:</string>
    <string name="RecibeNombre"></string>
    <string name="RecibeDias"></string>
    <string name="RecibeGenero"></string>
    <string name="SEGUIMIENTO">SEGUIMIENTO A TU EMBARAZO</string>
    <string name="CALCULAR">VER PROGRESO</string>
    <string name="TIEMPO">Faltan:</string>
    <string name="LineaTiempo"></string>
    <string name="PESO">Peso: </string>
    <string name="LineaPeso"></string>
    <string name="TAMAÑO">Tamaño:</string>
    <string name="LineaTamaño"></string>
    <string name="VERBEBE">VER BEBE</string>
    <string name="TELEFONO">LLAMAR A EMERGENCIAS</string>
    <string name="REGRESAR1">REGRESAR A INICIO</string>
    <string name="REGRESAR2">REGRESAR</string>
    <string name="TUBEBE">ASI SE ENCUENTRA TU BEBE AHORA MISMO</string>
    <string name="DIASLLEVA">En dias tu bebe lleva:</string>
    <string name="ENDIAS"></string>
    <string name="VERLO">MOSTRAR</string>
    <string name="InfoBebe"></string>
</resources>