<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/primero2"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Pantalla3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/primero1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/primero"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/segundo1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/segundo"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/tercero1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/tercero"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/primero11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/primero1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/segundo11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/segundo1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/tercero11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/tercero1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/primero111"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/primero2"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/segundo111"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/segundo2"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/tercero111"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@mipmap/tercero2"
            android:scaleType="centerCrop"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="313dp"
            android:layout_height="73dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/TUBEBE"
            android:textSize="23sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="191dp"
            android:layout_height="53dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="99dp"
            android:layout_marginEnd="138dp"
            android:text="@string/DIASLLEVA"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/Diasl"
            android:layout_width="118dp"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="43dp"
            android:gravity="center"
            android:text="@string/ENDIAS"
            android:textStyle="italic" />

        <Button
            android:id="@+id/Muestrame"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="131dp"
            android:text="@string/VERLO"
            android:textAlignment="center"
            android:textSize="20sp">

        </Button>

        <TextView
            android:layout_width="206dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="469dp"
            android:layout_marginEnd="15dp"
            android:text="@string/InfoBebe"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="italic"
            android:maxLines="7"
            android:ellipsize="end"
            android:visibility="gone"/>

    </RelativeLayout>




</LinearLayout>